# Arcade

./: CMakeLists.txt  README.md
doc/: Arcade.en.md
include/Games/Nibbler/: NibblerFruit.hpp  NibblerGame.hpp  NibblerGameState.hpp  NibblerSnake.hpp
include/Games/Snake/: ASnake.hpp  Fruit.hpp  GameState.hpp  ISnake.hpp  Snake.hpp  SnakeGame.hpp
include/Shared/: Color.hpp  Event.hpp  IDisplay.hpp  IFactory.hpp  IGame.hpp  ILibrary.hpp  LibraryType.hpp  Unit.hpp  Vector.hpp
include/Shared/Factories/: IMusicFactory.hpp  IRectFactory.hpp  ISpriteFactory.hpp  ITextFactory.hpp
include/Shared/Models/: IMusic.hpp  IRect.hpp  ISprite.hpp  IText.hpp
src/: main.cpp
src/Core/: Core.hpp  CoreMenu.hpp  LibraryLoader.hpp  Score.hpp
src/Games/Nibbler/: NibblerFruit.cpp  NibblerGame.cpp  NibblerGameState.cpp  NibblerSnake.cpp
src/Games/Snake/: ASnake.cpp  Fruit.cpp  GameState.cpp  Snake.cpp  SnakeGame.cpp
src/Libraries/Ncurse/: NCursesDisplay.cpp  NCursesDisplay.hpp  NCursesLibrary.cpp  NCursesLibrary.hpp
src/Libraries/Ncurse/Factories/: NCursesMusicFactory.cpp  NCursesMusicFactory.hpp  NCursesRectFactory.cpp  NCursesRectFactory.hpp  NCursesSpriteFactory.cpp  NCursesSpriteFactory.hpp  NCursesTextFactory.cpp  NCursesTextFactory.hpp
src/Libraries/Ncurse/Models/: NCursesMusic.cpp  NCursesMusic.hpp  NCursesRect.cpp  NCursesRect.hpp  NCursesSprite.cpp  NCursesSprite.hpp  NCursesText.cpp  NCursesText.hpp
src/Libraries/SDL2/: Display.cpp  Display.hpp  DisplayGetKey.cpp  Library.cpp  Library.hpp
src/Libraries/SDL2/Factories/: SDL2MusicFactory.cpp  SDL2MusicFactory.hpp  SDL2RectFactory.cpp  SDL2RectFactory.hpp  SDL2SpriteFactory.cpp  SDL2SpriteFactory.hpp  SDL2TextFactory.cpp  SDL2TextFactory.hpp
src/Libraries/SDL2/Models/: SDL2Music.cpp  SDL2Music.hpp  SDL2Rect.cpp  SDL2Rect.hpp  SDL2Sprite.cpp  SDL2Sprite.hpp  SDL2Text.cpp  SDL2Text.hpp
src/Libraries/SDL2/SDL2/: SDL2.cpp  SDL2.hpp  SDL2Font.cpp  SDL2Font.hpp  SDL2Renderer.cpp  SDL2Renderer.hpp  SDL2Surface.cpp  SDL2Surface.hpp  SDL2Texture.cpp  SDL2Texture.hpp  SDL2Window.cpp  SDL2Window.hpp
src/Libraries/SDL2/SDL2/Initializer/: SDL2Mix.cpp  SDL2Mix.hpp  SDL2TTF.cpp  SDL2TTF.hpp
src/Libraries/SDL2/SDL2/Models/: SDL2FontLoader.cpp  SDL2FontLoader.hpp  SDL2MusicWrapper.cpp  SDL2MusicWrapper.hpp  SDL2RectWrapper.cpp  SDL2RectWrapper.hpp  SDL2TextWrapper.cpp  SDL2TextWrapper.hpp
src/Libraries/SFML/: SFMLDisplay.cpp  SFMLDisplay.hpp  SFMLDisplayGetKey.cpp  SFMLLibrary.cpp  SFMLlibrary.hpp
src/Libraries/SFML/Factories/: SFMLMusicFactory.cpp  SFMLMusicFactory.hpp  SFMLRectFactory.cpp  SFMLRectFactory.hpp  SFMLSpriteFactory.cpp  SFMLSpriteFactory.hpp  SFMLTextFactory.cpp  SFMLTextFactory.hpp
src/Libraries/SFML/Models/: SFMLMusic.cpp  SFMLMusic.hpp  SFMLRect.cpp  SFMLRect.hpp  SFMLSprite.cpp  SFMLSprite.hpp  SFMLText.cpp  SFMLText.hpp
